/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/8.1.1/samples
 */
plugins {
    id "java"
    id "application"
}

group = "com.priyakdey"
version = "0.0.1-alpha"
sourceCompatibility = "19"
targetCompatibility = "19"

repositories {
    mavenCentral()
}

dependencies {

}

application {
    mainClass = "com.priyakdey.img.share.Main"
    applicationDefaultJvmArgs = ["--enable-preview"]
}


